@@ -4,6 +4,7 @@ import java.io.*;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import org.apache.commons.lang.StringUtils;
 /**
  * User: Roman
@@ -81,9 +82,19 @@ public class ProcessHelper {
         else {
             System.out.println("command: " + StringUtils.join(cmd.cmdParts, " ") );
         }
-        process = cmd.cmdLine != null
-            ? Runtime.getRuntime().exec(cmd.cmdLine, null, workDir)
-            : Runtime.getRuntime().exec(cmd.cmdParts, null, workDir);
+
+        ProcessBuilder processBuilder = cmd.cmdLine != null
+            ? new ProcessBuilder( cmd.cmdLine )
+            : new ProcessBuilder( cmd.cmdParts );
+
+        processBuilder.directory(workDir);
+        Map<String, String> env = processBuilder.environment();
+        env.put("KB_SDK_ACTIVE", "1");
+        process = processBuilder.start();
+
+//         process = cmd.cmdLine != null
+//             ? Runtime.getRuntime().exec(cmd.cmdLine, null, workDir)
+//             : Runtime.getRuntime().exec(cmd.cmdParts, null, workDir);
         Thread outTh = readInNewThread(process.getInputStream(), outType);
         Thread errTh = readInNewThread(process.getErrorStream(), errType);
         if (input != null) {
